Fix site layout - navigation bar doesnt overlap main area

--- a/Src/DragqnLD/DragqnLD.Web.Html5/Content/starterkit.css
+++ b/Src/DragqnLD/DragqnLD.Web.Html5/Content/starterkit.css
@@ -49,7 +49,7 @@
 
 @media (max-width: 979px) {
     .page-host {
-        top: 0;
+        top: 40;
     }
 
     .navbar-fixed-top {
